--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "automerge": "^0.12.1",
     "axios": "^0.19.2",
     "diff-match-patch": "^1.0.4",
     "lodash.debounce": "^4.0.8",
