--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-monaco-editor": "^0.33.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reconnecting-websocket": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
