--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,14 @@
     "automerge": "^0.12.1",
     "axios": "^0.19.2",
     "diff-match-patch": "^1.0.4",
-    "lodash.debounce": "^4.0.8",
     "monaco-editor": "^0.19.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-monaco-editor": "^0.33.0",
     "react-scripts": "3.3.0",
-    "reconnecting-websocket": "^4.2.0"
+    "reconnecting-websocket": "^4.2.0",
+    "use-debounce": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
